# immo_spider

./: .gitignore  .travis.yml  README.md  Vagrantfile  architecture.md  bootstrap.sh  install.sh  requirements.txt  run.sh  setup.py
conf/: .htaccess  apache.conf  conf.yaml  init_mongodb.py  main.conf  spider.fcgi  spider.wsgi
html/: index.html
html/css/: main.css  manage.css
html/js/: manage.js  views.js
openlayers/: index.html  main.css  views.js
orchestrator/: auth.py  conf.yaml  manager.py  requirements.txt
orchestrator/api/: main.py
orchestrator/plugins/compute/: __init__.py  avis_immobilier.py  ouest_france_immo.py  safti.py
orchestrator/plugins/save/: mongo_driver.py
orchestrator/static/css/: login.css  main.css  manage.css
orchestrator/templates/: login.html  main.html  manage.html
orchestrator/views/: main.py
spider/: __init__.py  auth.py  exceptions.py  manager.py  requirements.txt  wsgi.py
spider/api/: main.py
spider/plugins/: __init__.py
spider/static/css/: manage.css
spider/templates/: login.html  manage.html
spider/views/: main.py
src/apiviewer/: requirements.txt  setup.py
src/cobwebs/: Manifest.in  setup.cfg  setup.py
src/cobwebs/cobwebs/: __init__.py  exceptions.py
src/cobwebs/cobwebs/config/: __init__.py  core.py
src/cobwebs/cobwebs/mq/: __init__.py  core.py
src/cobwebs/cobwebs/mq/backends/: rabbitmq.py
src/cobwebs/cobwebs/tests/: test_config.py
src/cobwebs/tests/: test_config.py  test_mq.py
src/dbdriver/: requirements.txt  setup.py
src/logger/: setup.py
src/spider/: TODO  requirements.txt  setup.py
(+16 files in other folders)
