[metadata]
name = cobwebs
author = Asteroide
author-email = asteroide@domtombox.net
summary = Spider reusable tools
description-file = README.md
home-page = https://github.com/asteroide/immo_spider
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    cobwebs
